# REK-CPP

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  build.sh  main.cpp  runTest.sh  runTests.sh  testDense.cpp  testSampler.cpp  testSparse.cpp  testVector.cpp  test_dense.cpp  test_sampler.cpp  test_sparse.cpp
.github/workflows/: clang-format-check.yml  clang-tidy-review.yml  cmake-single-platform.yml  cmake.yml  valgrind.yml
CMake/: FindEigen3.cmake
algorithms/: REKSolver.cpp  REKSolver.hpp  RekSolver.hpp
dev-scripts/: run-valgrind.sh
matrix/impl/: DenseMatrix.hpp  SparseMatrix.hpp
samplers/: AliasSampler.hpp
src/: main.cpp  sampler.hpp  solver.hpp  test_sparse.cpp
src/algorithms/: RekSolver.hpp  Solver.hpp
src/samplers/: AliasSampler.hpp
test/: test_dense.cpp  test_sampler.cpp  test_sparse.cpp  test_sparse_colmajor.cpp
vector/: DoubleVector.cpp  DoubleVector.hpp
